# phreeqcrm_use_cmake

./: .gitignore  README.md  build_phreeqcrm.cmake  build_phreeqcrm_multi.cmake
src/: CMakeLists.txt  main.cpp
